--- a/views/admin/bank/table.ejs
+++ b/views/admin/bank/table.ejs
@@ -24,7 +24,7 @@
                 <td><%= bank[i].nameBank %></td>
                 <td><%= bank[i].accountNumber %></td>
                 <td><%= bank[i].name %></td>
-                <td><img src="http://localhost:3000/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px"></td>
+                <td><img src="https://kangcoding-admin.herokuapp.com/<%= bank[i].imageUrl %>" alt="imageUrl" width="70px"></td>
                 <td>
                   <form action="/admin/bank/<%= bank[i].id %>?_method=DELETE" method="POST">
                   <a 
