--- a/views/admin/booking/table_detail.ejs
+++ b/views/admin/booking/table_detail.ejs
@@ -5,7 +5,7 @@
     <div class="card-body">
     <div class="row">
         <div class="col-md-4">
-            <img src="http://localhost:3000/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block;">
+            <img src="https://kangcoding-admin.herokuapp.com/<%= booking.payments.proofPayment %>" alt="image" style="width: 100%; display: block;">
         </div>
         <div class="col-md-8">
             <div class="table-responsive">
