--- a/views/admin/item/detail_item/show_activity.ejs
+++ b/views/admin/item/detail_item/show_activity.ejs
@@ -37,7 +37,7 @@
                           <td><%= activity[i].name %></td>
                           <td><%= activity[i].type %></td>
                           <td>
-                            <img src="http://localhost:3000/<%= activity[i].imageUrl %>" alt="imageUrl"
+                            <img src="https://kangcoding-admin.herokuapp.com/<%= activity[i].imageUrl %>" alt="imageUrl"
                             width="70px">
                           </td>
                           <td>
