change logo dashboard

--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -4,8 +4,9 @@
     <!-- Sidebar - Brand -->
     <a class="sidebar-brand d-flex align-items-center justify-content-center" href="/admin/dashboard">
       <div class="sidebar-brand-text mx-3">
-        <!-- <img src="/sb-admin-2/img/logo.svg" alt="staycation"> -->
-        <img src="/public/images/stay.svg" alt="image">
+        <!-- <img src="/public/images/stay.svg" alt="image">
+         -->
+         <h2>StayCation</h2>
       </div>
     </a>
 
